Added Rotation to hero, added player veloctity, mouse class

--- a/TopDownShooter.csproj
+++ b/TopDownShooter.csproj
@@ -13,10 +13,14 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Content\2D\Hero.xnb" />
+    <None Remove="Content\2D\Misc\CursorArrow.xnb" />
     <None Remove="Content\Hero.xnb" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\2D\Hero.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\Misc\CursorArrow.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
