--- a/TopDownShooter.csproj
+++ b/TopDownShooter.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <None Remove="Content\2D\Hero.xnb" />
     <None Remove="Content\2D\Misc\CursorArrow.xnb" />
+    <None Remove="Content\2D\Projectiles\Fireball.xnb" />
     <None Remove="Content\Hero.xnb" />
   </ItemGroup>
   <ItemGroup>
@@ -21,6 +22,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\2D\Misc\CursorArrow.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\Projectiles\Fireball.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
