--- a/TopDownShooter.csproj
+++ b/TopDownShooter.csproj
@@ -17,6 +17,15 @@
     <None Remove="Content\2D\Misc\CursorArrow.xnb" />
     <None Remove="Content\2D\Projectiles\Fireball.xnb" />
     <None Remove="Content\2D\Units\Mobs\Imp.xnb" />
+    <None Remove="Content\Font\Arial16.xnb" />
+    <None Remove="Content\Font\Arial20Bold.xnb" />
+    <None Remove="Content\Font\Arial24.xnb" />
+    <None Remove="Content\Font\Lindsey13.xnb" />
+    <None Remove="Content\Font\Lindsey15.xnb" />
+    <None Remove="Content\Font\Lindsey16.xnb" />
+    <None Remove="Content\Font\Lindsey17.xnb" />
+    <None Remove="Content\Font\Lindsey18.xnb" />
+    <None Remove="Content\Font\Lindsey20.xnb" />
     <None Remove="Content\Hero.xnb" />
   </ItemGroup>
   <ItemGroup>
@@ -35,6 +44,33 @@
     <Content Include="Content\2D\Units\Mobs\Imp.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Font\Arial16.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Arial20Bold.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Arial24.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Lindsey13.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Lindsey15.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Lindsey16.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Lindsey17.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Lindsey18.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Font\Lindsey20.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
@@ -42,7 +78,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Audio\" />
-    <Folder Include="Content\Font\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
